updated index.html and style.css

--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,10 @@
         </div>
         <div class="hero-wrapper">
             <div class="hero">
-                <h1 class="hero__title">A Taste of Paradise</h1>
-                <p class="hero__subtitle">TIKMAN ANG TUNAY</p>
+                <div class="hero-title-wrapper">
+                    <h1 class="hero__title">Taste the Authenticity of Filipino Cuisine</h1>
+                </div>
+                <p class="hero__subtitle">We make Filipino dishes using the local ingredients</p>
                 <button class="book-btn" data-modal-target="#modal">BOOK NOW</button>
             </div>
         </div>
